1.03-SNAPSHOT Completed the Java Version downgrade. Fixed a bug in the ElasticInputItem